# VF-Plex

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
assets/branding/: README.md
backend/: app.py
backend/models/: job_models.py
backend/runners/: personaplex_runner.py
backend/tests/: test_app.py
config/: phrases.csv
docs/: architecture.md  backend-api.md  packaging.md  release-plan.md  repo-map.md  seo-keywords.md  upstream-attribution.md
examples/: sample_job.json
plugin/: CMakeLists.txt
plugin/Resources/: README.md
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/models/: VoiceDefinition.h  VoiceModel.cpp  VoiceModel.h
plugin/Source/services/: BackendClient.cpp  BackendClient.h
plugin/Source/ui/: WavePreviewComponent.h
scripts/: dev_run_backend.sh  dev_run_tester.sh  link_personaplex.sh  link_personaplex_notes.md
shared/: job_schema.json  voices.json
tester/: app.js  index.html  styles.css
